--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <script type="text/javascript">
 
       var spec2 = "homework9_georgia.vl.json";
-      vegaEmbed('#choropleth_map', spec2).then(function(result) {  (https://vega.github.io/vega/docs/api/view/) as result.view
+      vegaEmbed('#choropleth_map', spec2).then(function(result) {  
+        // access vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
       }).catch(console.error);
     </script>
 
